Code polishing